objects/Contact.object
<CustomObject>
    <fields>
        <fullName>CKSW_BASE__Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CKSW_BASE__Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Activity__c</fullName>
        <description>Which methods of Contact are to be used for this contact</description>
        <label>Contact Activity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Perspective</fullName>
                    <default>true</default>
                    <label>Perspective</label>
                </value>
                <value>
                    <fullName>NPS</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <description>Used for reporting and areas where full name is not provided</description>
        <formula>FirstName + &apos; &apos; + LastName</formula>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Step_Status__c</fullName>
        <label>Sales Step Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Step 1 - Introduction</fullName>
                </value>
                <value>
                    <fullName>Step 2 - Discovery Part 1</fullName>
                </value>
                <value>
                    <fullName>Step 3 - Discovery Part 2</fullName>
                </value>
                <value>
                    <fullName>Step 4 - Purpose</fullName>
                </value>
                <value>
                    <fullName>Step 5 - Sponsor</fullName>
                </value>
                <value>
                    <fullName>Step 6 - Exec Presentation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Steps_Status_Change__c</fullName>
        <label>Sales Steps Status Change</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i__CreatedForUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user on whose behalf the Contact was created</description>
        <label>Created for</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N700000028MRVEA2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>i__DaysSinceLastMail__c</fullName>
        <description>Number of days since the last email (inbound or outbound)</description>
        <formula>NOW() -  i__LastMailTime__c</formula>
        <label>Days Since Last Email</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i__LastInboundMail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The most recent email sent by this Contact</description>
        <label>Last Inbound Email</label>
        <referenceTo>i__Email__c</referenceTo>
        <relationshipLabel>Contacts (Last Inbound Email)</relationshipLabel>
        <relationshipName>LastInboundEmailForContacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>i__LastInboundTime__c</fullName>
        <description>Time of the most recent email sent by this Contact</description>
        <formula>i__LastInboundMail__r.i__Sent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Time of the most recent email sent by this Contact</inlineHelpText>
        <label>Last Inbound Email Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>i__LastMailTimeDelta__c</fullName>
        <description>Difference, in days, between the time the last outbound email was sent and the time the last inbound email was received</description>
        <formula>i__LastOutboundTime__c -  i__LastInboundTime__c</formula>
        <label>Last Mail Time Delta</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i__LastMailTime__c</fullName>
        <description>Time of the most recent email sent or received by this Contact</description>
        <formula>i__LastMail__r.i__Sent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Time of the most recent email sent or received by this Contact</inlineHelpText>
        <label>Last Email Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>i__LastMail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The most recent email to or from this Contact</description>
        <label>Last Email</label>
        <referenceTo>i__Email__c</referenceTo>
        <relationshipLabel>Contacts (Last Email)</relationshipLabel>
        <relationshipName>LastEmailForContacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>i__LastOutboundMail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The most recent email sent to this Contact</description>
        <label>Last Outbound Email</label>
        <referenceTo>i__Email__c</referenceTo>
        <relationshipLabel>Contacts (Last Outbound Email)</relationshipLabel>
        <relationshipName>LastOutboundEmailForContacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>i__LastOutboundTime__c</fullName>
        <description>Time of the most recent email sent to this Contact</description>
        <formula>i__LastOutboundMail__r.i__Sent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Time of the most recent email sent to this Contact</inlineHelpText>
        <label>Last Outbound Email Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>i__OtherEmails__c</fullName>
        <description>Enter additional email addresses here, one per line</description>
        <label>Other Email Addresses</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rh2__Currency_Test__c</fullName>
        <label>Currency Test</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rh2__Describe__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Describe</label>
        <referenceTo>rh2__PS_Describe__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rh2__Formula_Test__c</fullName>
        <formula>rh2__Currency_Test__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Test</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rh2__Integer_Test__c</fullName>
        <label>Integer Test</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>Contacts_for_NPS_Distribution</fullName>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Contact_Activity__c</columns>
        <filterScope>Everything</filterScope>
        <label>Contacts for NPS Distribution</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>